--- a/src/app/month-holidays/month-holidays.component.css
+++ b/src/app/month-holidays/month-holidays.component.css
@@ -1,6 +1,8 @@
 .container {
-    grid-template-columns: 20% 20% 20% 20% 20%;
-    grid-template-rows: 12rem;
+    grid-template-columns: auto auto auto auto;
+    grid-gap: 1rem;
+    padding: 1rem;
+    background: #c4c4c4;
 }
 
 .holiday {
@@ -9,9 +11,20 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    background: white;
 }
 
 .holiday h3 {
     margin: 0 0 1rem 0;
     font-weight: 100;
+}
+
+.holiday .date {
+    font-weight: bold;
+}
+
+@media (max-width: 640px) {
+    .container {
+        grid-template-columns: auto auto;
+    }
 }
